# sof

./: .gitignore
src/arch/xtensa/configs/: baytrail_defconfig  baytrail_gcc_defconfig  cherrytrail_defconfig  cherrytrail_gcc_defconfig
src/audio/: CMakeLists.txt  Kconfig
src/audio/drc/testbench_drc_asin/: drc_asin_fixed.c
src/audio/drc/testbench_drc_lin2db/: drc_lin2dB_fixed.c
src/audio/drc/testbench_drc_sin/: drc_sin_fixed.c
src/audio/impulse_noise/: CMakeLists.txt  impnse.c  impnse_fFilt.c  impnse_generic.c  impnse_main.c  impnse_stdmlib.c
src/audio/tdfb/: tdfb.c
src/include/ipc/: topology.h
src/include/sof/audio/impulse_noise/: impnse.h  impnse_types.h  main.h  rtwtypes.h  stdmlib.h
src/include/user/: tdfb.h
src/math/: trig.c
tools/math_bench/: CMakeLists.txt  build.sh  main.c  main.cpp  test_runner.h
tools/math_bench/common/: common.h  const.h  typdef.h
tools/math_bench/drc_pow_fixed/: decibels.c  decibels.h  drc_pow_fixed.c  exp_small_fixed.c  exp_small_fixed.h  init_data.c  init_data.h
tools/math_bench/drc_pow_fixed/drc_power_fixed/: drc_power_fixed.sln  drc_power_fixed.vcxproj  drc_power_fixed.vcxproj.filters
tools/math_bench/include/: trig.h
tools/math_bench/mscripts/: Run_script.m  get_drc_asin.m  get_drc_db2mag.m  get_drc_inv.m  get_drc_mag2db.m  get_drc_pow.m  get_drc_sine_fixed.m
tools/math_bench/source/algorithm/: acos.c  asin.c  cordicacos.c  cordicangle.c  cordicasin.c  cordicatan.c  cordiccexp.c  cordiccos.c  cordicsincos.c  cordicsine.c
tools/math_bench/source/init/: init_acos.c  init_angle.c  init_asin.c  init_atan.c  init_cexp.c  init_cos.c  init_sincos.c  init_sine.c
tools/math_bench/task/: testbench_cordic_fsm.c
tools/math_bench/test_func_1/: test_1.c
tools/math_bench/test_func_2/: test_1.c  test_2.c
tools/testbench/: testbench.c  topology.c
tools/testbench/include/testbench/: common_test.h
tools/topology/development/: CMakeLists.txt
tools/topology/sof/: pipe-tdfb-eq-iir-volume-capture-16khz.m4  pipe-tdfb-eq-iir-volume-capture.m4  pipe-tdfb-volume-capture-16khz.m4  pipe-tdfb-volume-capture.m4
tools/tplg_parser/: tplg_parser.c
tools/tplg_parser/include/tplg_parser/: topology.h
tools/tune/eq/: mls_freq_resp.m
tools/tune/tdfb/: bf_design.m  example_line_array.m
zephyr/: CMakeLists.txt  wrapper.c
